--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,10 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: #f4f4f4;
+  color: #4A628A;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
