--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,24 +1,7 @@
 
-:root {
-  --background: #DFF2EB;
-  --foreground: #4A628A;
-  --center: #B9E5E8;
-  --dark: #7AB2D3;
-}
-
-body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  background-color: #f4f4f4;
-  color: var(--foreground);
-}
-
 .container {
-  background-color: var(--background);
-  color: var(--foreground);
+  background-color: #DFF2EB;
+  color: #4A628A;
   padding: 20px 0;
 }
 
@@ -42,18 +25,18 @@ body {
 }
 
 .nav ul li a {
-  color: var(--foreground);
+  color: #4A628A;
   text-decoration: none;
 }
 
 .hero {
-  background-color: var(--center);
+  background-color: #B9E5E8;
   height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: var(--foreground);
+  color: #4A628A;
 }
 
 .hero h2 {
@@ -65,7 +48,7 @@ body {
 }
 
 .btn {
-  color: var(--foreground);
+  color: #4A628A;
   padding: 10px 20px;
   text-decoration: none;
   border-radius: 5px;
@@ -83,7 +66,7 @@ body {
 }
 
 .destinationCard {
-  background: var(--center);
+  background: #B9E5E8;
   border: 1px solid #dddddd;
   border-radius: 5px;
   margin: 15px;
@@ -98,8 +81,8 @@ body {
 }
 
 .footer {
-  background: var(--background);
-  color: var(--foreground);
+  background: #DFF2EB;
+  color: #4A628A;
   text-align: center;
   padding: 20px 0;
 }
